tests/baselines/reference/genericRestArgs.errors.txt
==== tests/cases/compiler/genericRestArgs.ts (4 errors) ====
    function makeArrayG<T>(...items: T[]): T[] { return items; }
    var a1Ga = makeArrayG(1, ""); // no error
    var a1Gb = makeArrayG<any>(1, ""); 
    var a1Gc = makeArrayG<Object>(1, ""); 
    var a1Gd = makeArrayG<number>(1, ""); // error
               ~~~~~~~~~~
!!! genericRestArgs.ts(5,12): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'number' to argument 2 which is of type 'string'.
               ~~~~~~~~~~
!!! genericRestArgs.ts(5,12): error TS2087: Could not select overload for 'call' expression.
    
    function makeArrayGOpt<T>(item1?: T, item2?: T, item3?: T) {
        return [item1, item2, item3];
    }
    var a2Ga = makeArrayGOpt(1, ""); 
    var a2Gb = makeArrayG<any>(1, "");
    var a2Gc = makeArrayG<any[]>(1, ""); // error
               ~~~~~~~~~~
!!! genericRestArgs.ts(12,12): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Type 'Number' is missing property 'concat' from type 'any[]'.
               ~~~~~~~~~~
!!! genericRestArgs.ts(12,12): error TS2087: Could not select overload for 'call' expression.